<resources>
    <string name="app_name">luckyzyx</string>
    <string name="title_name">Luckyzyx Tools</string>
    <string name="xposeddescription">luckyzyx Xposed + magisk</string>
    <string name="checkupdate">检查更新</string>
    <string name="todo" translatable="false" />
    <string name="button">Toast</string>
    <string name="button2">全局刷新率</string>
    <string name="activity">跳转activity</string>
    <string name="close">关闭activity</string>
    <string name="root">获取root</string>
    <string name="exit">退出APP</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_xposed">Xposed</string>
    <string name="title_activity_magisk">Magisk</string>
    <string name="title_activity_settings">设置</string>
    <string name="nav_item_home">主页</string>
    <string name="nav_item_dashboard">其他</string>
    <string name="nav_item_user">我的</string>

    <string name="fps">刷新率</string>
    <string name="fpstilelable">全局高刷</string>
    <string name="btn_xposed_text">Xposed</string>
    <string name="btn_magisk_text">Magisk</string>
    <string name="not_supported">请确保Xposed API >= 93,并且模块已勾选相应作用域\n若上述已经完成,可尝试点击确定退出APP,然后重试</string>
    <string name="ignore">忽略</string>
    <string name="gamespace_text">禁用游戏空间</string>

    <string name="corepatch">核心破解</string>
    <string name="corepatch_summer">解除安装限制,支持 Android 10–12</string>
    <string name="downgr">允许降级安装应用</string>
    <string name="downgr_summary">允许应用在安装新版本的情况下直接覆盖安装旧版本</string>
    <string name="authcreak">禁用软件包管理器签名验证</string>
    <string name="authcreak_summary">关闭安装应用时的签名验证,可以安装被篡改的应用</string>
    <string name="digestCreak">禁用APK签名验证</string>
    <string name="digestCreak_summary">允许直接覆盖安装同包名不同签名的应用</string>
    <string name="UsePreSig">安装时始终使用已装app的签名</string>
    <string name="UsePreSig_summary">不是一般的<b>危险</b> 仅在绝对需要时启用</string>
    <string name="enhancedMode">增强模式</string>
    <string name="enhancedMode_summary">可以解决一些App内部的完整性校验,一般不需要开启</string>

    <string name="usepresig_warn">!!所有安装包可以覆盖已安装的App!!\n安装未知的安装包时请务必小心</string>
</resources>