<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="系统框架"
        app:summary="不生效可尝试重启"
        app:key="Android">

        <SwitchPreference
            app:defaultValue="false"
            app:key="disable_flag_secure"
            app:iconSpaceReserved="false"
            app:title="禁用FLAG_SECURE"
            app:summary="在不允许截图的APP中允许截图"/>

        <SwitchPreference
            app:defaultValue="false"
            app:key="remove_statusbar_top_notification"
            app:iconSpaceReserved="false"
            app:title="移除状态栏上层警告"
            app:summary="移除状态栏“此应用在其他应用上层显示”"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/corepatch"
        app:key="CorePatch"
        app:summary="@string/corepatch_summer" >

        <SwitchPreference
            app:key="downgrade"
            app:title="@string/downgr"
            app:summary="@string/downgr_summary"
            app:iconSpaceReserved="false"
            app:defaultValue="true" />

        <SwitchPreference
            app:key="authcreak"
            app:title="@string/authcreak"
            app:summary="@string/authcreak_summary"
            app:iconSpaceReserved="false"
            app:defaultValue="true" />

        <SwitchPreference
            app:key="digestCreak"
            app:title="@string/digestCreak"
            app:summary="@string/digestCreak_summary"
            app:iconSpaceReserved="false"
            app:defaultValue="true" />

        <SwitchPreference
            app:key="UsePreSig"
            app:title="@string/UsePreSig"
            app:summary="@string/UsePreSig_summary"
            app:iconSpaceReserved="false"
            app:defaultValue="false" />

        <SwitchPreference
            app:key="enhancedMode"
            app:title="@string/enhancedMode"
            app:summary="@string/enhancedMode_summary"
            app:iconSpaceReserved="false"
            app:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>